--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -26,7 +26,7 @@
               <table width="800px" border="0px solid">
                 <tr>
                   <td>
-                    <app-service-activity
+                    <app-service-proposed
                       [serviceName]="service.content.name"
                       [serviceUser]="service.content.user"
                       [ServiceType]="service.content.type"
@@ -37,7 +37,7 @@
                       [serviceDate]="service.content.datejour"
                       [status]="service.status"
                       [service_descriptor]="service">
-                    </app-service-activity>
+                    </app-service-proposed>
                   </td>
                   <td width="5%">
                     {{i+1}}
@@ -76,7 +76,7 @@
               <table width="800px" border="0px solid">
                 <tr>
                   <td>
-                    <app-service-activity
+                    <app-service-proposed
                       [serviceName]="service.content.name"
                       [serviceUser]="service.content.user"
                       [ServiceType]="service.content.type"
@@ -87,7 +87,7 @@
                       [serviceDate]="service.content.datejour"
                       [status]="service.status"
                       [service_descriptor]="service">
-                    </app-service-activity>
+                    </app-service-proposed>
                   </td>
                   <td width="5%">
                     {{i+1}}
