--- a/pfirst/src/app/app.component.html
+++ b/pfirst/src/app/app.component.html
@@ -11,6 +11,7 @@
 
 <div id="space"></div>
 
+<button class="btn btn-primary" (click)="uploadTestNotif()">Send notif</button>
 <button class="btn btn-primary" (click)="notificationService.sleepWatcher()">Stop checking</button>
 <button class="btn btn-primary" (click)="notificationService.wakeWatcher(5000)">Start checking</button>
 <!--
