Mode sombre dispo sur les services single

--- a/pfirst/src/app/accompagner-single/accompagner-single.component.html
+++ b/pfirst/src/app/accompagner-single/accompagner-single.component.html
@@ -1,11 +1,11 @@
 <br>
-
+<div class="main-body">
 <table align="center">
   <tr>
     <h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
   </tr>
   <tr>
-    <button type="button" class="btn btn-dark"
+    <button type="button" class="btn btn-info"
             (click)="goProfil('profil/'+this.service_descriptor.idUser)">Voir le profil</button>
     <!-- <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button> -->
 
@@ -14,7 +14,7 @@
 
 
 
-<div class="jumbotron jumbotron-fluid">
+<div id="jumb" class="jumbotron jumbotron-fluid">
   <div class="container">
     <table align="center" cellpadding="20">
 
@@ -65,4 +65,4 @@
 
 </div>
 
-
+</div>
