--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -1,3 +1,5 @@
+<div class="main-body">
+
 <table align="center">
   <tr>
     <td><h1 class="display-4" align="center">{{User}} a besoin de toi</h1></td>
@@ -12,7 +14,7 @@
 </table>
 
 
-<div class="jumbotron jumbotron-fluid">
+<div id="jumb" class="jumbotron jumbotron-fluid">
   <div class="container">
     <table align="center" cellpadding="20">
 
@@ -83,4 +85,4 @@
 
 </div>
 
-
+</div>
