ajout observable sur url params, tout est ok

--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -29,7 +29,7 @@
     <tr>
       <td>
         <span id="aPropos" *ngIf="info_user!=undefined">
-          A propos : {{info_user['bio']}}
+          A propos : {{getBio()}}
         </span>
       </td>
       <td align="center">
