--- a/pfirst/src/app/service-activity/service-activity.component.html
+++ b/pfirst/src/app/service-activity/service-activity.component.html
@@ -44,7 +44,7 @@
 
   <!-- STATUT DE L'ANNONCE -->
   <a *ngIf = "this.status === 1" href="#" class="badge badge-pill badge-warning">En cours</a>
-  <a *ngIf = "this.finished === true" href="#" class="badge badge-pill badge-secondary">Terminée</a>
+  <a *ngIf = "this.status === 2" href="#" class="badge badge-pill badge-secondary">Terminée</a>
 
   <div id="collapseExample" [ngbCollapse]="isCollapsed">
     <span *ngIf="noHelper">
