Cycle vie des services OK, gérer le cas TERMINÉ #4

--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -1,4 +1,3 @@
-
 <table align="center" width="1800px">
   <tr>
     <!-- ###################### LISTE DES SERVICES EN COURS ############################""""-->
@@ -7,15 +6,15 @@
       <table>
         <tr>
           <td>
-            <h2  id="demandeTexte">En cours</h2>
+            <h2 id="demandeTexte">En cours</h2>
           </td>
           <td>
-            <img  *ngIf="isCollapsedEnCours" (click)="isCollapsedEnCours = !isCollapsedEnCours"
-                  [attr.aria-expanded]="!isCollapsedEnCours" aria-controls="collapseExample"
-                  style="width:50px" src="../../assets/data/fleche.png" alt="">
-            <img  *ngIf="!isCollapsedEnCours" (click)="isCollapsedEnCours = !isCollapsedEnCours"
-                  [attr.aria-expanded]="!isCollapsedEnCours" aria-controls="collapseExample"
-                  style="width:50px" src="../../assets/data/fleche_up.png" alt="">
+            <img *ngIf="isCollapsedEnCours" (click)="isCollapsedEnCours = !isCollapsedEnCours"
+                 [attr.aria-expanded]="!isCollapsedEnCours" aria-controls="collapseExample"
+                 style="width:50px" src="../../assets/data/fleche.png" alt="">
+            <img *ngIf="!isCollapsedEnCours" (click)="isCollapsedEnCours = !isCollapsedEnCours"
+                 [attr.aria-expanded]="!isCollapsedEnCours" aria-controls="collapseExample"
+                 style="width:50px" src="../../assets/data/fleche_up.png" alt="">
           </td>
         </tr>
       </table>
@@ -40,7 +39,7 @@
                     </app-service-activity>
                   </td>
                   <td width="5%">
-                    {{i+1}}
+                    {{i + 1}}
                   </td>
                 </tr>
               </table>
@@ -49,7 +48,7 @@
               <table width="800px" border="0px solid">
                 <tr>
                   <td>
-                    <app-service-activity
+                    <app-service-proposed
                       [serviceName]="service.content.name"
                       [serviceUser]="service.content.user"
                       [ServiceType]="service.content.type"
@@ -60,10 +59,10 @@
                       [serviceDate]="service.content.datejour"
                       [status]="service.status"
                       [service_descriptor]="service">
-                    </app-service-activity>
+                    </app-service-proposed>
                   </td>
                   <td width="5%">
-                    {{i+1}}
+                    {{i + 1}}
                   </td>
                 </tr>
               </table>
@@ -77,23 +76,23 @@
   <tr>
     <!-- ###################### LISTE DES SERVICES DEMANDES EN ATTENTE ############################""""-->
 
-      <div class="col-md-7" id="services-list">
-        <table>
-          <tr>
-            <td>
-              <h2  id="demandeTexte">Vos demandes en attente</h2>
-            </td>
-            <td>
-              <img  *ngIf="isCollapsedDemande" (click)="isCollapsedDemande = !isCollapsedDemande"
-                    [attr.aria-expanded]="!isCollapsedDemande" aria-controls="collapseExample"
-                style="width:50px" src="../../assets/data/fleche.png" alt="">
-              <img  *ngIf="!isCollapsedDemande" (click)="isCollapsedDemande = !isCollapsedDemande"
-                    [attr.aria-expanded]="!isCollapsedDemande" aria-controls="collapseExample"
-                    style="width:50px" src="../../assets/data/fleche_up.png" alt="">
-            </td>
-          </tr>
-        </table>
-        <div id="collapseExample" [ngbCollapse]="isCollapsedDemande">
+    <div class="col-md-7" id="services-list">
+      <table>
+        <tr>
+          <td>
+            <h2 id="demandeTexte">Vos demandes en attente</h2>
+          </td>
+          <td>
+            <img *ngIf="isCollapsedDemande" (click)="isCollapsedDemande = !isCollapsedDemande"
+                 [attr.aria-expanded]="!isCollapsedDemande" aria-controls="collapseExample"
+                 style="width:50px" src="../../assets/data/fleche.png" alt="">
+            <img *ngIf="!isCollapsedDemande" (click)="isCollapsedDemande = !isCollapsedDemande"
+                 [attr.aria-expanded]="!isCollapsedDemande" aria-controls="collapseExample"
+                 style="width:50px" src="../../assets/data/fleche_up.png" alt="">
+          </td>
+        </tr>
+      </table>
+      <div id="collapseExample" [ngbCollapse]="isCollapsedDemande">
         <div class="row">
           <ul class="list-group">
             <div *ngFor="let service of asked_services,  let i =index">
@@ -114,7 +113,7 @@
                     </app-service-activity>
                   </td>
                   <td width="5%">
-                    {{i+1}}
+                    {{i + 1}}
                   </td>
                 </tr>
               </table>
@@ -122,28 +121,29 @@
           </ul>
         </div>
       </div>
-      </div>
+    </div>
   </tr>
 
   <!-- ############### SERVICE PROPOSÉS EN ATTENTE #############-->
   <tr>
+    <div class="col-md-7" id="services-list">
 
-    <table>
-      <tr>
-        <td>
-          <h2  id="demandeTexte">Vos propositions en attente</h2>
-        </td>
-        <td>
-          <img  *ngIf="isCollapsedProposition" (click)="isCollapsedProposition = !isCollapsedProposition"
-                [attr.aria-expanded]="!isCollapsedProposition" aria-controls="collapseExample"
-                style="width:50px" src="../../assets/data/fleche.png" alt="">
-          <img  *ngIf="!isCollapsedProposition" (click)="isCollapsedProposition = !isCollapsedProposition"
-                [attr.aria-expanded]="!isCollapsedProposition" aria-controls="collapseExample"
-                style="width:50px" src="../../assets/data/fleche_up.png" alt="">
-        </td>
-      </tr>
-    </table>
-    <div id="collapseExample" [ngbCollapse]="isCollapsedProposition">
+      <table>
+        <tr>
+          <td>
+            <h2 id="demandeTexte">Vos propositions en attente</h2>
+          </td>
+          <td>
+            <img *ngIf="isCollapsedProposition" (click)="isCollapsedProposition = !isCollapsedProposition"
+                 [attr.aria-expanded]="!isCollapsedProposition" aria-controls="collapseExample"
+                 style="width:50px" src="../../assets/data/fleche.png" alt="">
+            <img *ngIf="!isCollapsedProposition" (click)="isCollapsedProposition = !isCollapsedProposition"
+                 [attr.aria-expanded]="!isCollapsedProposition" aria-controls="collapseExample"
+                 style="width:50px" src="../../assets/data/fleche_up.png" alt="">
+          </td>
+        </tr>
+      </table>
+      <div id="collapseExample" [ngbCollapse]="isCollapsedProposition">
         <div class="row">
           <ul class="list-group">
             <div *ngFor="let service of proposed_services,  let i =index">
@@ -164,7 +164,7 @@
                     </app-service-proposed>
                   </td>
                   <td width="5%">
-                    {{i+1}}
+                    {{i + 1}}
                   </td>
                 </tr>
               </table>
@@ -172,5 +172,6 @@
           </ul>
         </div>
       </div>
+    </div>
   </tr>
 </table>
