--- a/pfirst/src/app/service-proposed/service-proposed.component.html
+++ b/pfirst/src/app/service-proposed/service-proposed.component.html
@@ -6,7 +6,7 @@
     <div class="col-md-10">
       <div class="card-body">
         <div class="text-left">
-          <h2 class="card-title">{{serviceName}} pour {{serviceUser}}<img *ngIf="amIanAssignee(myID)"
+          <h2 class="card-title">{{serviceName}} pour {{serviceUser}}<img *ngIf="accepted || enCours"
                                                                           (click)="getMailByID(myID)"
                                                                           id="icone-mail"
                                                                           src="../../assets/data/icone-mail.png" alt="">
