get sur l'historique des services en test #30

--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -63,7 +63,7 @@
   </tr>
 </table>
 
-  <!-- pour les anciens services
+  <!-- pour les anciens services -->
     <div id="experience-wrapper">
     <table width="1500px">
       <tr align="center">
@@ -73,6 +73,6 @@
       </tr>
     </table>
   </div>
-  -->
+
 
 </div>
