--- a/pfirst/src/app/service-activity/service-activity.component.html
+++ b/pfirst/src/app/service-activity/service-activity.component.html
@@ -76,6 +76,6 @@
     Les participants à votre annonces sont :
     <div *ngFor="let assignee of this.assignees">
       <span style="cursor: pointer" class="badge badge-pill badge-info"
-            (click)="router.navigate(['profil/'+ assignee])">{{(assignee)}}</span>
+            (click)="router.navigate(['profil/'+ assignee])">{{name_assignees[assignee]}}</span>
     </div>
   </div>
