--- a/pfirst/src/app/service-activity/service-activity.component.html
+++ b/pfirst/src/app/service-activity/service-activity.component.html
@@ -50,12 +50,12 @@
 
   <div id="collapseExample" [ngbCollapse]="isCollapsed">
     <span *ngIf="noHelper">
-      <p style="font-size: large">Aucune ne s'est encore proposée pour réaliser ce service.</p>
+      <p style="font-size: large">Pas de nouveau helper !</p>
     </span>
     <span>
       <div id="Proposition" *ngFor="let helper of helpers">
-        <mat-toolbar color="#ffffff" *ngIf="helpers.length > 0 && !amIanAssignee(helper.id) && this.status === 0"> <!-- color ne marche pas-->
-        <mat-toolbar-row *ngIf="!amIanAssignee(helper.id)">
+        <mat-toolbar color="#ffffff" *ngIf="!noHelper"> <!-- color ne marche pas-->
+        <mat-toolbar-row *ngIf="!amIanAssignee(helper.idUser)">
             <span>{{helper.firstName}} {{helper.lastName}} vous a proposé son aide.</span>
             <span class="spacer"></span>
             <mat-icon style="cursor:pointer" title="Voir le profil" class="icon" (click)="router.navigate(['profil/'+helper.idUser])">face</mat-icon>
