--- a/pfirst/src/styles.css
+++ b/pfirst/src/styles.css
@@ -13,3 +13,22 @@ mat-dialog-container#modal-history-component {
 mat-dialog-container#modal-user-component{
   background-color: #343a40;
 }
+
+.red-snackbar{
+  background-color: #ff3352;
+  color: white;
+}
+
+.blue-snackbar{
+  background-color: dodgerblue;
+  color: white;
+}
+
+.light-mode{
+  background-color: #aaaaaa;
+}
+
+.dark-mode{
+  background-color: #2e2e2e;
+  color: white;
+}
